# partwright

./: .gitignore  PRD.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt
dogfood/: FEEDBACK_TEMPLATE.md  README.md  run.py
dogfood/briefs/desk-hook/: DESIGN_BRIEF.md
dogfood/briefs/lidded-box/: DESIGN_BRIEF.md
dogfood/briefs/pi-mount/: DESIGN_BRIEF.md
examples/lidded-box/: BUILD_PLAN.md
partwright/: __main__.py  brief.py  cli.py  scaffold.py  sketch.py  skill.py
partwright/skills/design-part/: SKILL.md
partwright/templates/brief/: BUILD_PLAN.md  DESIGN_BRIEF.md  DESIGN_INTERVIEW.md  SCHEMA.md
partwright/templates/project/: CLAUDE.md.template  README.md.template  generate.py.template  gitignore.template  preview.py.template  reference_README.md.template  requirements.txt.template  settings.local.json.template
templates/brief/: BUILD_PLAN.md  DESIGN_INTERVIEW.md
templates/project/: CLAUDE.md.template  README.md.template  generate.py.template  preview.py.template  settings.local.json.template
web/: sketch.html
