[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "partwright"
version = "0.1.0"
description = "A personal toolkit for designing 3D-printable build123d parts: a project scaffolder, a design-brief generator, and an SVG sketch tool."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Matthew Noel" }]

# Partwright has ZERO third-party runtime dependencies. Everything it needs ships
# with the Python 3.12 standard library (argparse, tomllib, string, http.server,
# pathlib, shutil, subprocess, webbrowser).
dependencies = []

[project.scripts]
partwright = "partwright.cli:main"

[tool.setuptools.packages.find]
include = ["partwright*"]

[tool.setuptools.package-data]
# The scaffolder, brief generator, sketch tool, and orchestrator skill ship their
# templates and assets inside the package so an installed `partwright` (via
# `uv tool install`/`uvx`) finds them without needing the source checkout.
partwright = ["templates/**/*", "web/**/*", "skills/**/*"]

[tool.black]
target-version = ["py312"]
